--- a/solo-play/juo/chat/package.json
+++ b/solo-play/juo/chat/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ssam1221/WebDevelopSummitStudyGroup#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-session": "^1.17.2"
+    "express-session": "^1.17.2",
+    "ws": "^8.2.3"
   }
 }
